# t3lang

./: .gitignore  .prettierrc  .release-it.json  CHANGELOG.md  CODESIGNING.md  LICENSE  README.md  app.go  eslint.config.ts  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  sample.xlf  tailwind.config.js  wails.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-28-ui-redesign-design.md  2026-01-28-ui-redesign-implementation.md  2026-01-28-wails-release-workflow-design.md
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
sample/: v2.xlf
scripts/: render-icon.mjs  update-version.js
services/: files.go  watcher.go  workspace.go
src/: App.tsx  app.css  app.html  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: t3lang
src-tauri/src/: lib.rs  main.rs
src/components/: Button.tsx  EmptyState.tsx  FileGroup.tsx  FileItem.tsx  FileTree.tsx  NewLanguageDialog.tsx  SearchBar.tsx  Select.tsx  SettingsDialog.tsx  Sidebar.tsx  TranslationTable.tsx
src/contexts/: SettingsContext.tsx  ThemeContext.tsx
src/hooks/: useDialogs.ts  useFileOperations.ts  useNotifications.ts
src/lib/: actions.ts  contextMenu.ts  project.ts  settings.svelte.ts  state.svelte.ts  tauri.ts
typo3-translations/: de.locallang.xlf  de.locallang_db.xlf  locallang.xlf  locallang_db.xlf
(+89 files in other folders)
