[package]
name = "t3lang"
version = "3.2.0"
description = "TYPO3 XLIFF translation manager"
authors = ["Markus Sommer"]
edition = "2021"

[lib]
name = "t3lang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.8"
